Made all the Test cases. Made the Tester class ready to use.